--- a/css/style.css
+++ b/css/style.css
@@ -201,6 +201,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 }
 .main-block__body {
   max-width: 450px;
+  padding: 0 15px;
 }
 @media (max-width:900px){
   .main-block__body{
@@ -235,6 +236,16 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
   font-size: 40px;
   line-height: 42px;
   color: #18191F;
+}
+@media (max-width:400px){
+  .main-block__title{
+    font-size: 35px;
+  }
+}
+@media (max-width:290px){
+  .main-block__title{
+    font-size: 28px;
+  }
 }
 .main-block__sub-title {
   font-style: normal;
